--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -14,7 +14,7 @@
 {% block content %}
 <main>
 
-  <section class="overview">
+  <section class="overview custom-scroll">
 
     <!--Табы вверху экрана-->
 		<div class="overview__tabs ct__top-tabs ct__top-tabs--wide">
