--- a/storage/templates/storage/redesign/assets.html
+++ b/storage/templates/storage/redesign/assets.html
@@ -6,7 +6,7 @@
 {% load l10n %}{% load i18n %}
 
 {% block content %}
-<section class="actives">
+<section class="actives custom-scroll">
     <form id="assets_actions_form" role="form">
     <!-- Заголовок -->
     <h1 class="actives__title ct__page-title">{% trans 'Активы' context "assets" %}</h1>
