--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -18,7 +18,7 @@
 		cursor: pointer;
 	}
 </style>
-<section class="store">
+<section class="store custom-scroll">
     <h1 class="store__title ct__page-title">{% trans 'Склад' context "storage" %}</h1>
 	<button class="store__title-settings ct__js-modal-sett-open" id="store__modal1-open">
 		<svg version="1.0" xmlns="http://www.w3.org/2000/svg"
