картинка региона и ссылка на регион на стр. партии

--- a/party/templates/party/redesign/party_blocks/has_party.html
+++ b/party/templates/party/redesign/party_blocks/has_party.html
@@ -107,8 +107,8 @@
 
         </div><!--кнопки конец-->
 
-        <div class="party__region">
-          <img src="static/img/regions/{{ player.party.region.on_map_id }}">
+        <div class="party__region" onclick="window.location.href = 'region/{{ player.party.region.pk }}/'">
+          <img src="static/img/regions/{{ player.party.region.on_map_id }}.png">
           <p>{{ player.party.region.region_name }}</p>
         </div>
 
