редизайн страницы без партии

--- a/party/templates/party/redesign/party.html
+++ b/party/templates/party/redesign/party.html
@@ -8,7 +8,7 @@
 {% load get_key_list %}
 {% load get_class_name %}
 
-{% load party_blocks.no_party %}
+{% load redesign.party_blocks.no_party %}
 {% load redesign.party_blocks.has_party %}
 
 {% block content %}
