--- a/party/templates/party/redesign/party_blocks/no_party.html
+++ b/party/templates/party/redesign/party_blocks/no_party.html
@@ -22,7 +22,7 @@
       <!--Табы-->
       <div class="party__tabs ct__top-tabs ct__top-tabs--wide">
 
-        <button class="ct__top-tab ct__top-tab2 active ct__mid-btn" onclick="switchMainBlocks(1)">
+        <button class="ct__top-tab ct__top-tab2 active ct__mid-btn" onclick="switchMainBlocks(0)">
           <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0_259_318" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
               <path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z"/>
@@ -37,7 +37,7 @@
           <span>{% trans 'региональные' context "no_party" %}</span>
         </button>
 
-        <button class="ct__top-tab ct__top-tab1 ct__mid-btn" onclick="switchMainBlocks(0)">
+        <button class="ct__top-tab ct__top-tab1 ct__mid-btn" onclick="switchMainBlocks(1)">
           <svg width="144" height="30" viewBox="0 0 144 30" xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0_259_317" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
               <path class="geometry1" d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z"/>
@@ -59,7 +59,7 @@
     <div class="party__mmid-line"></div>
 
 	<!--БЛОК ТАБЛИЦА #1-->
-	<div class="ct__js-table-container" style="display: none;" id="js-ct-table-1">
+	<div class="ct__js-table-container" style="display: none;" id="js-ct-table-2">
 		<!--таблица-->
 		<table class="ct__js-table">
 			<tbody>
@@ -81,7 +81,7 @@
 				{% if party_count != 0 %}
 					{% for party in all_parties %}
 				<tr>
-					<td class="j-t-one" onclick="window.open('/party/{{ party.pk }}/')">
+					<td class="j-t-one" onclick="window.open('/party/{{ party.pk }}/')" style="cursor: pointer;">
                     {% if party.image %}
                         <img src="{{ party.image.url }}">
                     {% else %}
@@ -95,7 +95,7 @@
 					  </svg>
                     {% endif %}
 					</td>
-					<td class="j-t-two" onclick="window.open('/party/{{ party.pk }}/')">
+					<td class="j-t-two" onclick="window.open('/party/{{ party.pk }}/')" style="cursor: pointer;">
 						{{ party.title }}
 					</td>
 					<td class="j-t-three" style="text-align: center;">{{ sizes|dict_key:party }}</td>
@@ -120,7 +120,7 @@
 	</div>
 
 	<!--БЛОК ТАБЛИЦА #2-->
-	<div class="ct__js-table-container" id="js-ct-table-2">
+	<div class="ct__js-table-container" id="js-ct-table-1">
 		<!--таблица-->
 		<table class="ct__js-table">
 			<tbody>
@@ -142,14 +142,14 @@
 				{% if party_count != 0 %}
 					{% for party in regional_parties %}
 				<tr>
-					<td class="j-t-one" onclick="window.open('/party/{{ party.pk }}/')">
+					<td class="j-t-one" onclick="window.open('/party/{{ party.pk }}/')" style="cursor: pointer;">
                     {% if party.image %}
                         <img src="{{ party.image.url }}">
                     {% else %}
                         <img src="{% static 'img/nopic_party.png' %}">
                     {% endif %}
 					</td>
-					<td class="j-t-two" onclick="window.open('/party/{{ party.pk }}/')">
+					<td class="j-t-two" onclick="window.open('/party/{{ party.pk }}/')" style="cursor: pointer;">
 						{{ party.title }}
 					</td>
 					<td class="j-t-three" style="text-align: center;">{{ sizes|dict_key:party }}</td>
