--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -3151,7 +3151,7 @@ p.overview__love-stat-timer {
     padding: 0 30rem;
     padding-left: 0;
     overflow-y: auto;
-    height: calc(100vh - 227rem);
+    height: 100%;
     display: flex;
     flex-direction: column;
     scrollbar-color: var(--c30) transparent;
@@ -3175,6 +3175,7 @@ p.overview__love-stat-timer {
     display: flex;
     justify-content: space-between;
     padding: 30rem 0;
+    padding-top: 8rem;
   }
   .overview__chat-controls-input {
     width: 100%;
@@ -3246,7 +3247,7 @@ p.overview__love-stat-timer {
     position: absolute;
     left: initial;
     right: 0;
-    bottom: 130rem;
+    bottom: 85rem;
     width: 510rem;
   }
   .overview__stickers-close-overlay {
