--- a/factory/templates/factory/factory.html
+++ b/factory/templates/factory/factory.html
@@ -85,7 +85,15 @@
                         <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                             <select name="storage" id="storage">
                                 {% for storage in storages %}
-                                <option {% if storage == storages|first %} selected {% endif %} value="{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}">{{ storage|dict_key:'region__region_name' }}</option>
+                                <option
+                                    {% with store_reg=storage|dict_key:'region__pk' %}
+                                        {% if store_reg == player.region.pk %}
+                                            selected
+                                        {% else %}
+                                            {% if storage == storages|first %} selected {% endif %}
+                                        {% endif %}
+                                    {% endwith %}
+                                        value="{% localize off %}{{ storage|dict_key:'pk' }}{% endlocalize %}">{{ storage|dict_key:'region__region_name' }}</option>
                                 {% endfor %}
                             </select>
                         </div>
