--- a/player/templates/player/redesign/wallet.html
+++ b/player/templates/player/redesign/wallet.html
@@ -58,19 +58,19 @@
 
     </div>
 
-    <div class="tlist__tab-container">
+    <div class="tlist__tab-container custom-scroll">
       <!--СПИСОК 1-->
-      <div class="tlist__tab custom-scroll active">
+      <div class="tlist__tab active">
         {% wallet_operations request player %}
       </div>
 
       <!--СПИСОК 2-->
-      <div class="tlist__tab custom-scroll">
+      <div class="tlist__tab">
         {% wallet_locks request player %}
       </div>
 
       <!--СПИСОК 3-->
-      <div class="tlist__tab custom-scroll">
+      <div class="tlist__tab">
         {% wallet_cash request player %}
       </div>
     </div>
