--- a/bill/templates/state/gov/reviewed/change_residency.html
+++ b/bill/templates/state/gov/reviewed/change_residency.html
@@ -25,11 +25,26 @@
     {% endwith %}
 
     {% with bill=data|dict_key:'bill' %}
-    <div class="col-xs-6 col-sm-6 col-md-6">
+    <div class="col-xs-3 col-sm-3 col-md-3">
         {% if bill.residency == 'issue' %}
         Выдаётся министром
         {% else %}
         Свободная
+        {% endif %}
+    </div>
+    <div class="col-xs-3 col-sm-3 col-md-3">
+        {% if bill.residency == 'issue' %}
+        <div class="row" align="center">
+            Стоимость:
+        </div>
+        <div class="row">
+            {% trans 'Автоматы' context "goods" %}: {{ bill.rifle_cost }}
+        </div>
+        <div class="row">
+            {% trans 'БПЛА' context "goods" %}: {{ bill.drone_cost }}
+        </div>
+        {% else %}
+        Бесплатно
         {% endif %}
     </div>
     <div class="col-xs-2 col-sm-2 col-md-2">
