отображение режима прописки на странице госа

--- a/state/templates/state/state_view.html
+++ b/state/templates/state/state_view.html
@@ -113,6 +113,16 @@
                                     </b>
                                 </div>
                             </div>
+                            <div class="row flex" >
+                                <div class="col-xs-6 col-sm-6 col-md-6" align="left">
+                                    <b><font size="4">{% trans 'Прописка' %}:</font></b>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <b>
+                                        <font size="4">{{ state.get_residency_display }}</font>
+                                    </b>
+                                </div>
+                            </div>
                             <div class="row flex">
                                 <div class="col-xs-6 col-sm-6 col-md-6" align="left">
                                     <b><font size="4">Дата основания:</font></b>
