--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -3811,6 +3811,14 @@ p.overview__love-stat-timer {
   margin-bottom: 12rem;
 }
 
+.party__tabs-management {
+  margin-bottom: 12rem;
+}
+
+.party__name-edit-block {
+  margin-bottom: 12rem;
+}
+
 .party__top {
   display: flex;
   margin-bottom: 16rem;
@@ -4021,12 +4029,40 @@ p.overview__love-stat-timer {
 }
 
 .party__mana-name {
-  margin: 0 16rem;
-  padding-bottom: 3rem;
+  margin: 0;
   font-weight: 400;
   font-size: 18rem;
-  line-height: 16rem;
+  line-height: 1;
   letter-spacing: -0.5rem;
+}
+
+.party__mana-name--desc {
+  font-size: 14rem;
+  line-height: 1.4;
+}
+
+.party__name-edit-before {
+  padding: 0 16rem;
+  display: flex;
+}
+
+.party__name-edit-btn {
+  position: relative;
+  top: 2rem;
+  flex-shrink: 0;
+  display: block;
+  width: 30rem;
+  height: 30rem;
+  margin-right: 6rem;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.party__name-edit-btn svg {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .party__mmid-split {
@@ -4160,6 +4196,19 @@ p.overview__love-stat-timer {
   margin-top: 24rem;
 }
 
+.party__join-party-btn {
+  margin: 0 auto;
+  margin-top: 16rem;
+}
+
+.party__join-desc {
+  margin: 0;
+  margin-bottom: 18rem;
+  padding: 0 12rem;
+  font-size: 14rem;
+  line-height: 1.4;
+}
+
 @media (min-width: 1200px) {
   .party {
     margin-top: 100rem;
@@ -4180,6 +4229,10 @@ p.overview__love-stat-timer {
     padding: 12rem;
     min-width: 400rem;
   }
+  .party__top-content--join {
+    width: 400rem;
+    min-width: initial;
+  }
   .party__region {
     align-items: center;
   }
@@ -4187,7 +4240,6 @@ p.overview__love-stat-timer {
     justify-content: center;
   }
   .party__mana-name {
-    text-align: center;
   }
   .party__mmid-split {
     justify-content: center;
@@ -4200,12 +4252,32 @@ p.overview__love-stat-timer {
     width: 360rem;
     margin: 0 auto;
   }
+  .party__tabs-management {
+    width: 360rem;
+    margin: 0 auto;
+    margin-bottom: 12rem;
+  }
   .party__new-top {
     width: 500rem;
     margin: 0 auto;
   }
   .party__new-label input {
     width: 55%;
+  }
+  .party__name-edit-block {
+    width: 360rem;
+    margin: 0 auto;
+    margin-bottom: 12rem;
+  }
+  table.party__join-info-table {
+    width: 572rem;
+    margin: 0 auto;
+  }
+  .party__join-desc {
+    margin: 0 auto;
+    margin-bottom: 18rem;
+    padding: 0;
+    width: 572rem;
   }
 }
 
@@ -4244,6 +4316,42 @@ p.overview__love-stat-timer {
   height: max-content;
   display: flex;
   flex-direction: column;
+}
+
+.rank-edit__textarea {
+  position: relative;
+  height: 100rem;
+  padding: 12rem;
+  background-color: transparent;
+  font-size: 14rem;
+  color: var(--c10one);
+  resize: none;
+  outline: none;
+}
+
+.rank-edit__textarea::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  content: '';
+  border: 1px solid var(--c10one);
+  pointer-events: none;
+  opacity: 0.75;
+}
+
+.rank-edit__textarea:focus::after {
+  opacity: 1;
+}
+
+.rank-edit__title {
+  font-size: 14rem;
+  text-align: center;
+  margin: 0;
+  font-weight: normal;
+  margin-bottom: 12rem;
 }
 
 .rank-edit__save {
