--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -225,13 +225,15 @@
 					<h2 class="ct__s-title">{% trans 'партия' %}</h2>
 					<p class="ct__s-text">
 						{% if player.party %}
-						<a href='/party/{% localize off %}{{ player.party.pk }}{% endlocalize %}' style="color: inherit;">
+						<a href='/party/{% localize off %}{{ player.party.pk }}{% endlocalize %}'>
 							{{ player.party.title }}
 						</a>
 						{% else %}{% trans 'беспартийный' %}{% endif %}
+						(
 						<a href="/party_history/{% localize off %}{{ player.pk }}{% endlocalize %}/">
-							{% trans '(история)' context "profile" %}
+							{% trans 'история' context "profile" %}
 						</a>
+						)
 					</p>
 				</div>
 
