--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -114,13 +114,15 @@
 					<h2 class="ct__s-title">{% trans 'партия' %}</h2>
 					<p class="ct__s-text">
 						{% if char.party %}
-						<a href='/party/{% localize off %}{{ char.party.pk }}{% endlocalize %}' style="color: inherit;">
+						<a href='/party/{% localize off %}{{ char.party.pk }}{% endlocalize %}'>
 							{{ char.party.title }}
 						</a>
 						{% else %}{% trans 'беспартийный' %}{% endif %}
+						(
 						<a href="/party_history/{% localize off %}{{ char.pk }}{% endlocalize %}/">
-							(история)
+							история
 						</a>
+						)
 					</p>
 				</div>
 
